minor fixes + teavm