@@ -1,13 +1,11 @@
 package dynamic.semantic.entity.statement;
 
 import dynamic.exception.ValidationException;
-import dynamic.interpret.Context;
 import dynamic.interpret.Memory;
 import dynamic.interpret.StackFrame;
 import dynamic.interpret.ValueStack;
 import dynamic.semantic.context.ValidationContext;
 import dynamic.semantic.entity.expr.Expr;
-import dynamic.semantic.entity.expr.lit.Const;
 import dynamic.semantic.entity.expr.ref.FunctionCall;
 import dynamic.semantic.entity.expr.ref.IdRef;
 import dynamic.semantic.entity.expr.ref.Reference;
@@ -29,7 +27,7 @@ public class Assignment extends Statement {
   @Override
   public void validate(ValidationContext context) throws ValidationException {
     if (reference instanceof FunctionCall call) {
-      throw new ValidationException(call.span, "function call %s is illegal in assigment\n".formatted(call));
+      throw new ValidationException(call.span, String.format("function call %s is illegal in assigment", call));
     } else if (reference instanceof IdRef idRef) {
       CheckUtils.checkVarDeclared(idRef.id, context);
     } else {
@@ -59,17 +57,14 @@ public class Assignment extends Statement {
 
   @Override
   public void execute(Memory memory, ValueStack valueStack, StackFrame stackFrame) {
-    Context.isLeftRefCall = true;
     reference.execute(memory, valueStack, stackFrame);
-    Context.isLeftRefCall = false;
-
-    var oldObj = valueStack.pop();
-    var addr = oldObj.memoryAddress;
+    valueStack.pop();
 
     expression.execute(memory, valueStack, stackFrame);
     var newValue = valueStack.pop();
+    if (newValue.isNotAllocated()) memory.alloc(newValue);
+    int newAddr = newValue.memoryAddress;
 
-    if (addr == -1) addr = memory.alloc(newValue);
-    memory.write(addr, newValue);
+    reference.onAssign(newAddr, stackFrame);
   }
 }
